src/validation/tests/snapshots/rusty__validation__tests__duplicates_validation_test__enum_variants_are_considered_when_checking_for_duplicate_variable_symbols.snap
---
source: src/validation/tests/duplicates_validation_test.rs
expression: diagnostics
---
error[E004]: x: Duplicate symbol.
  ┌─ <internal>:4:17
  │
4 │                 x : DINT;
  │                 ^ x: Duplicate symbol.
5 │                 position : (x, y);
  │                             - see also

error[E004]: x: Duplicate symbol.
  ┌─ <internal>:5:29
  │
4 │                 x : DINT;
  │                 - see also
5 │                 position : (x, y);
  │                             ^ x: Duplicate symbol.
